--- a/styles.css
+++ b/styles.css
@@ -160,3 +160,24 @@ h2 {
 .apresenta-lista{
     display: none;
 }
+
+: :root {
+    --laranja-claro:#FF862A;
+    --alto-contraste-fundo: #000000;
+    --alto-contraste-texto: #ffffff;
+    --alto-contraste-link: #ffd700;
+}
+.alto-contraste{
+    background-color: var(--alto-contraste-fundo);
+}
+.alto-contraste #tropicalia{
+    background: none;
+}
+
+.alto-contraste #galeria {
+    background-color: var(--alto-contraste-fundo);
+}
+
+.alto-contraste .fundo-galeria {
+    background: none;
+}
